Section1/video1.3/iptables.save
# Generated by iptables-save v1.4.21 on Thu Feb 21 08:48:45 2019
# Use iptables-restore to load these rules
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [90:12340]
:test - [0:0]
-A INPUT -m set --match-set goodguys src -j ACCEPT
-A INPUT -p udp -m set --match-set dns src -m udp --sport 53 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m set --match-set badguys src -j REJECT --reject-with tcp-reset
-A INPUT -p udp -m set --match-set badguys src -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m set --match-set lantcp dst -j ACCEPT
-A INPUT -i eth0 -p udp -m set --match-set lanudp dst -j ACCEPT
-A INPUT -i eth1 -p tcp -m set --match-set publictcp dst -j ACCEPT
-A INPUT -i eth1 -p tcp -m set ! --match-set publictcp dst -j test
-A INPUT -i eth1 -p udp -j test
-A INPUT -m conntrack --ctstate INVALID -j LOG --log-prefix INVALID
-A INPUT -m conntrack --ctstate INVALID -j test
-A INPUT -s 127.0.0.1/32 ! -i lo -j LOG --log-prefix SPOOFED_LOCAL
-A INPUT -s 127.0.0.1/32 ! -i lo -j DROP
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A test -m set --match-set internalnet src -j RETURN
-A test -j LOG --log-prefix BADGUYS
-A test -j SET --add-set badguys src
-A test -p tcp -j REJECT --reject-with tcp-reset
-A test -p udp -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Feb 21 08:48:45 2019
